[Home]

Summary:ASTERISK-27498: ICE candidate parser - ICE foundation parsing too short
Reporter:Michele PrĂ  (mpra)Labels:pjsip
Date Opened:2017-12-19 11:08:16.000-0600Date Closed:2018-01-02 06:51:14.000-0600
Priority:MinorRegression?
Status:Closed/CompleteComponents:Channels/chan_sip/General
Versions:13.18.2 15.1.4 Frequency of
Occurrence
Constant
Related
Issues:
Environment:Attachments:
Description: https://tools.ietf.org/html/rfc5245#section-15.1
rfc for candidate reporting that foundation can be 1*32ice-char but asterisk parser limit to 31 char
sscanf(a, "candidate: %31s %30u %3s %30u %23s %30u typ %5s %*s %23s %*s %30u", foundation, &candidate.id, transport,
(unsigned*) & candidate.priority, address, &port, cand_type, relay_address, &relay_port)

it's easy to fix in chan_sip.c in method process_sdp_a_ice
Comments:By: Asterisk Team (asteriskteam) 2017-12-19 11:08:17.158-0600

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

By: Matt Fredrickson (mfredrickson) 2017-12-20 15:04:26.410-0600

Good find!  As this shouldn't be too difficult to change, we would love to see you or someone else get a patch in for this.  See the previous comment for details on how to get started with the patch contribution process.

By: Matt Fredrickson (mfredrickson) 2017-12-20 15:13:05.622-0600

Looks like this is also a bug in PJSIP.

By: Friendly Automation (friendly-automation) 2018-01-02 06:51:16.359-0600

Change 7775 merged by Jenkins2:
ice: Increase foundation buffer size

[https://gerrit.asterisk.org/7775|https://gerrit.asterisk.org/7775]

By: Friendly Automation (friendly-automation) 2018-01-02 06:55:03.479-0600

Change 7777 merged by Jenkins2:
ice: Increase foundation buffer size

[https://gerrit.asterisk.org/7777|https://gerrit.asterisk.org/7777]

By: Friendly Automation (friendly-automation) 2018-01-02 07:49:05.960-0600

Change 7776 merged by Joshua Colp:
ice: Increase foundation buffer size

[https://gerrit.asterisk.org/7776|https://gerrit.asterisk.org/7776]